dist/1.0/bin/sample/retrieveUnpackaged/objects/OrderAttribute__c.object
<CustomObject>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>ActionType</label>
        <picklist>
            <picklistValues>
                <fullName>create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AttributeInstanceId__c</fullName>
        <label>AttributeInstanceId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Order Attributes</relationshipLabel>
        <relationshipName>R00N800000032iNkEAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BundleComponent__c</fullName>
        <label>Bundle Component</label>
        <referenceTo>Bundle_Component__c</referenceTo>
        <relationshipLabel>Order Attributes</relationshipLabel>
        <relationshipName>Order_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <externalId>true</externalId>
        <label>CSR ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <formula>Attribute__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Attribute has already been installed in Billing</description>
        <inlineHelpText>Indicates if Attribute has already been installed in Billing</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GenericProductAttribute__c</fullName>
        <label>Generic Product Attribute</label>
        <referenceTo>Generic_Product_Attribute__c</referenceTo>
        <relationshipLabel>Order Attributes</relationshipLabel>
        <relationshipName>Order_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OSS_Action_Execution_Result__c</fullName>
        <description>What is the result of Executing or Cancelling related transaction in OSS</description>
        <inlineHelpText>What is the result of Executing or Cancelling related transaction in OSS</inlineHelpText>
        <label>OSS Action Execution Result</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OSS_Action_Insert_Result__c</fullName>
        <description>Determines what was the result of inserting planned activity into OSS for this attribute.</description>
        <inlineHelpText>Determines what was the result of inserting planned activity into OSS for this attribute.</inlineHelpText>
        <label>OSS Action Insert Result</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OSS_Transaction_ID__c</fullName>
        <description>Field storing transaction ID of changes made in OSS in regards of numbers.</description>
        <inlineHelpText>Field storing transaction ID of changes made in OSS in regards of numbers.</inlineHelpText>
        <label>OSS Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSSid__c</fullName>
        <description>Id of the attribute&apos;s value in OSS enumerator.</description>
        <externalId>true</externalId>
        <label>OSS Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderGenericProduct__c</fullName>
        <label>Order Generic Product</label>
        <referenceTo>OrderGenericProduct__c</referenceTo>
        <relationshipLabel>Order Attributes</relationshipLabel>
        <relationshipName>Order_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrderLine__c</fullName>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Order Attributes</relationshipLabel>
        <relationshipName>Order_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Tariff__c</fullName>
        <label>Order Tariff</label>
        <referenceTo>OrderTariff__c</referenceTo>
        <relationshipLabel>Order Attributes</relationshipLabel>
        <relationshipName>Order_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <description>Field storing previous value of attribute</description>
        <inlineHelpText>Field storing previous value of attribute</inlineHelpText>
        <label>Previous Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>SFDC_ID</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Skip_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical flag; indicates if OA, which is used for storing XML with tariffs and directions should involve or skip trigger mechanism which interpret saved XML and create OT and OD;</description>
        <label>Skip Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_OSS_ID__c</fullName>
        <description>Field containing source OSS ID used for phone number cessions and transfers.</description>
        <inlineHelpText>Field containing source OSS ID used for phone number cessions and transfers.</inlineHelpText>
        <label>Source OSS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Val__c</fullName>
        <label>Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Fractions__c</fullName>
        <description>XML with Fractions&apos; Billing IDs that should be sent to Billing</description>
        <inlineHelpText>XML with Fractions&apos; Billing IDs that should be sent to Billing</inlineHelpText>
        <label>Value Fractions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Order Attribute</label>
    <nameField>
        <label>Order Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>